added method to find older person and calculate days older between person